@@ -1,3 +1,13 @@
+2011-03-16  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
+
+	* Add ThirdPartyToolbox/L2_distance.m
+
+	- L2_DISTANCE - computes Euclidean distance matrix
+
+	- By Roland Bunschoten
+
+	- Requirement of the isomap functions.
+
 2011-03-15  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
 
 	* Add ThirdPartyToolbox/Isomap.m, ThirdPartyToolbox/IsomapII.m
